# airtime

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: circuitdojo_feather_nrf9151_ns.conf  circuitdojo_feather_nrf9151_ns.overlay
recorded_logs/: log.0000  log.0001
recorded_logs/1-5-25-drive/: log.0000  log.0001  session.json
recorded_logs/1-5-26-mcc-lhm-mcc/: session.json
recorded_logs/1-5-26-night-test/: log.0000  log.0001  log.0002  log.0003  log.0004  log.0005  log.0006  log.0007
samples/active_sleep/: Readme.md
samples/active_sleep/boards/: circuitdojo_feather_nrf9151_ns.conf  circuitdojo_feather_nrf9160_ns.conf  circuitdojo_feather_nrf9160_ns.overlay
samples/active_sleep/src/: main.c
samples/battery/: CMakeLists.txt  prj.conf
samples/battery/boards/: circuitdojo_feather_nrf9151_ns.conf  circuitdojo_feather_nrf9160_ns.conf
samples/battery/src/: main.c
samples/blinky/: CMakeLists.txt
samples/blinky/src/: main.c
samples/deep_sleep/: prj.conf
samples/deep_sleep/boards/: circuitdojo_feather_nrf9151_ns.overlay  circuitdojo_feather_nrf9161_ns.conf
samples/deep_sleep/src/: main.c
samples/gps/: CMakeLists.txt  prj.conf
samples/gps/boards/: circuitdojo_feather_nrf9160_ns.conf  circuitdojo_feather_nrf9161_ns.conf
samples/gps/src/: startup.c
samples/usb_detect/: CMakeLists.txt  Readme.md  prj.conf
samples/usb_detect/src/: main.c
src/: baro_state.c  baro_state.h  flight_timer.c  flight_timer.h  gps_state.c  gps_state.h  main.c  power_mgr.c  power_mgr.h  rtc_sync.c  rtc_sync.h  sd_logger.c  sd_logger.h  session_mgr.c  session_mgr.h  session_upload.c  session_upload.h  supl_assist.c  supl_assist.h
tools/: flight_data.csv  flight_viewer.html  log_parser.py
